<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion2urdf</name>
  <version>0.0.0</version>
  <description>URDF/xacro package exported from Fusion 360 (ROS2)</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>BSD</license>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
